<resources>
    <string name="app_name">Aplicacion</string>
    <string name="iniciar">Iniciar Aplicacion</string>
    //botones de pantalla principal
    <string name="adicion">Adicion</string>
    <string name="modificacion">Modificacion</string>
    <string name="eliminar">Eliminar</string>
    <string name="inactivar">Inactivar</string>
    <string name="reactivar">Reactivar</string>
    <string name="salir">Salir</string>
    //LABELS
    <string name="codigo_label">Código</string>
    <string name="ruc_label">RUC</string>
    <string name="razon_label">Razón Social</string>
    <string name="direccion_label">Direccion</string>
    <string name="mail_label">e-mail</string>
    <string name="telefono_label">Teléfono</string>

    //fragment datos
    <string name="dummy">Dummy</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="descripcion">Imagen representativa de la empresa</string>

    <string name="mision">MISION</string>
    <string name="vision">VISION</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //Estados
    <string name="activo">Activo</string>
    <string name="inactivo">Inactivo</string>
    <string name="eliminado">Eliminado</string>



</resources>