<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.MyApplication.FullscreenContainer"
    tools:context=".fragments.Datos">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/razonLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/razon_label"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"/>

        <FrameLayout
            android:id="@+id/razonContenedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </FrameLayout>
<!--
        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy"
            />-->
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent="0.6">

            <TextView
                android:id="@+id/rucLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruc_label"
                android:textStyle="bold"/>

            <!--<TextView
                android:id="@+id/ruc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dummy" />-->
            <FrameLayout
                android:id="@+id/rucContenedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">

            </FrameLayout>
            <TextView
                android:id="@+id/direccionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion_label"
                android:textStyle="bold"/>
            <FrameLayout
                android:id="@+id/direccionContenedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">
            </FrameLayout>
            <!--<TextView
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dummy" />-->

            <TextView
                android:id="@+id/mailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail_label"
                android:textStyle="bold"/>
            <FrameLayout
                android:id="@+id/mailContenedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">
            </FrameLayout>
          <!--  <TextView
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dummy" />-->

            <TextView
                android:id="@+id/telefonoLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono_label"
                android:textStyle="bold"/>
            <FrameLayout
                android:id="@+id/telefonoContenedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">
            </FrameLayout>

            <!--<TextView
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/dummy" />-->


        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="1.0"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/descripcion"
                android:src="@drawable/activo"

                app:layout_constraintWidth_percent="0.4" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/ordenLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy"
            app:layout_constraintBottom_toTopOf="@+id/aceptar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/aceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aceptar"
            app:layout_constraintBottom_toTopOf="@+id/cancelar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/cancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.4"/>

        <TextView
            android:id="@+id/mision"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/mision"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9" />
        <FrameLayout
            android:id="@+id/misionContenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mision">
        </FrameLayout>

        <!--<TextView
            android:id="@+id/misionC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/dummy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mision"
            app:layout_constraintWidth_percent="0.9" />-->

        <TextView
            android:id="@+id/vision"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/vision"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/misionContenedor"
            app:layout_constraintWidth_percent="0.9" />
        <FrameLayout
            android:id="@+id/visionContenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vision">
        </FrameLayout>
        <!--<TextView
            android:id="@+id/visionC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"

            android:text="@string/dummy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vision"
            app:layout_constraintWidth_percent="0.9" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>